# eleven

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: basic.shader
src/: Application.cpp  Application.h  Eleven.h  elpch.cpp  elpch.h
src/Backend/Abstractions/: IRendererAPI.h  IShader.h
src/Backend/DirectX12/: DirectXRenderer.cpp  DirectXRenderer.h
src/Backend/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
src/Backend/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/Core/: Buffer.cpp  Buffer.h  Core.h  ElevenMath.h  linmath.h
src/Renderer/: DirectXRenderer.cpp  DirectXRenderer.h  IRendererAPI.h  OpenGLRenderer.cpp  OpenGLRenderer.h
src/Utility/: Helpers.h
